<resources>
    <string name="app_name">TrendCenter</string>
    <string name="report_bug">Report Bug\n</string>
    <string name="suggestions">Suggestions</string>
    <string name="share_app">Share App</string>
    <string name="developer">"About "</string>
    <string name="app_version">Version 1.0</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account_signup">Don\'t have an account? <b>Signup</b>.</string>
    <string name="login">Login\n</string>
    <string name="password">Password\n</string>
    <string name="email">Email</string>
    <string name="please_login_to_continue_this_app">Please Login to continue this App</string>
    <string name="login_now">Login Now\n</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="enter_your_email_address_and_password_to_get_access_to_your_account">Enter your Email and Password to get access to your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up\n</string>
    <string name="already_have_an_account_login">Already have an Account? <b>Login</b>.</string>
    <string name="welcome_to_app">Welcome to TrendCentre</string>
    <string name="quote">Discover your style at TrendCentre – where fashion meets its focal point.</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile">Update Profile</string>
    <string name="home">Home</string>
    <string name="favorite">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="you_don_t_have_any_order">You don\'t have any order!</string>
    <string name="your_order">Your Order</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_cart_is_empty">Your Cart is Empty!</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="follow_latest_n_trendy_shoe">Follow latest\n trendy shoe.</string>
</resources>