<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_list"
        android:title="@string/orders" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/profile" />
</menu>
