<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.SignUpFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/stay_connected"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/enter_your_email_address_and_password_to_get_access_to_your_account"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorBlueDark"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorBlueDark"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorBlueDark"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignup"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorBlueDark"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>